Working on progress bars

--- a/style.css
+++ b/style.css
@@ -1,6 +1,32 @@
 
 /* MOBILE FIRST */
 
+h2 {
+    font-size: 24px;
+}
+
+h3 {
+    font-size: 18px;
+}
+
+main {
+    margin: auto 1em auto 1em;
+}
+
+body {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    margin: 0 0 0 0;
+}
+
+footer {
+    background-color: rgb(44, 65, 136);
+    height: 5em;
+    width:100%;
+    margin-top: 1em;
+    margin-bottom: 0;
+}
+
 /* header */
 
 .navbar{
@@ -22,20 +48,72 @@
     text-decoration: none;
 }
 
-.container img{
-    height: 30em;
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
+    
+    
 
 .container h1 {
     font-family: 'Courier New', Courier, monospace;
     font-size: 50px;
     color: whitesmoke;
     text-shadow: 2px 2px #141414;
+    text-align: start; 
 }
 
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+/* main */
+
+.skill {
+    border: 1px solid rgb(61, 61, 61);
+    border-radius: 10px;
+    margin: 1em 0 1em 0;
+    height: 1em;
+}
+
+.skill_animation {
+    height: 1em;
+    border-radius: 8px;
+    background-color: rgb(234, 234, 16);
+}
+
+#skill_hockey {
+    animation: hockey_bar 5s infinite;
+}
+
+@keyframes hockey_bar {
+    0% { width: 0; }
+    100% { width: 90%; }
+}
+
+#skill_parkour {
+    animation: parkour_bar 5s infinite;
+}
+
+@keyframes parkour_bar {
+    0% { width: 0; }
+    100% { width: 50%; }
+}
+
+#skill_basket {
+    animation: basket_bar 5s infinite;
+}
+
+@keyframes basket_bar {
+    0% { width: 0; }
+    100% { width: 20%; }
+}
+
+#skill_song {
+    animation: song_bar 5s infinite;
+}
+
+@keyframes song_bar {
+    0% { width: 0; }
+    100% { width: 70%; }
+}
+
